--- a/module/Application/view/application/partial/row.phtml
+++ b/module/Application/view/application/partial/row.phtml
@@ -1,5 +1,6 @@
 <?php
-if(count($nDestaques) ==1 ) {
+print_r(count($nDestaques) ); die;
+if(count($nDestaques) == 1 ) {
     $lines = 1;
 }
 for($i = 0; $i < $lines ; $i++) :?>
