--- a/module/Application/view/partial/header.phtml
+++ b/module/Application/view/partial/header.phtml
@@ -9,7 +9,7 @@
     }(document, 'script', 'facebook-jssdk'));
 </script>
 <header class="header">
-    <h1 class="seo">Seja bem vindo e anuncie concosco gratuitamente! - Aproveite os 11 primeiros anúncios com imagem acessivel ficam em destaque.</h1>
+    <h1 class="seo">Seja bem vindo e anuncie concosco gratuitamente! - Para destaque na primeira página por favor opte pela opção de destaque.</h1>
     <div class="container">
         <div class="row">
             <div class="offset6 span6 right-align loginArea">
